fix configuration/vulnerabilities status setting

--- a/public/templates/management/configuration/vulnerabilities/vulnerabilities-general.html
+++ b/public/templates/management/configuration/vulnerabilities/vulnerabilities-general.html
@@ -20,7 +20,7 @@
 
             <wz-config-item
                 label="Vulnerability detector status"
-                value="currentConfig['vulnerability-detector'].disabled === 'yes' ? 'disabled' : 'enabled'">
+                value="currentConfig['vulnerability-detector'].enabled === 'yes' ? 'enabled' : 'disabled'">
             </wz-config-item>
             <wz-config-item
                 label="Interval between scan executions"
