Add pagination to vulnerabilities table and fix margin

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -421,7 +421,9 @@ md-content.md-default-theme, md-content{
 .wz-border-0 {
   border: 0px;
 }
-
+.table{
+  margin: 0 !important;
+}
 .wz-md-tab .md-tab,
 .wz-md-tab .md-active {
   color: black !important;
